--- a/src/main/webapp/WEB-INF/template/cheque/BotoesCheque.xhtml
+++ b/src/main/webapp/WEB-INF/template/cheque/BotoesCheque.xhtml
@@ -7,8 +7,7 @@
 
 	<p:toolbar style="margin-top:2px; width:100%">
 		<p:toolbarGroup>
-			<p:commandButton value="Salvar" id="botaoSalvar" action="#{lancamentoChequeBean.salvar()}" update="@form" />
-			<p:commandButton value="Cadastrar Cheque" action="#{lancamentoChequeBean.cadastrar()}" update=":frm:menu:lista_cheques :frm:menu:observacao"  />
+			<p:commandButton value="Salvar" id="botaoSalvar" action="#{cadastroChequeBean.salvar()}" update="@form" />
 			<p:button value="Novo" outcome="/cheque/CadastroCheque" />
 		</p:toolbarGroup>
 
